--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -172,7 +172,7 @@
                 formData.append('g-recaptcha-response', recaptchaToken);
                 
                 try {
-                    const response = await fetch('/register', {
+                    const response = await fetch('/', {
                         method: 'POST',
                         body: formData
                     });
