--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -129,7 +129,7 @@
   </script>
   <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   <script src="https://www.google.com/recaptcha/api.js?render={{recaptcha_site_key}}"></script>
-  <script>
+  <script>/*
         // reCAPTCHA v3 Site Key - Replace with your actual key
             const RECAPTCHA_SITE_KEY_OPEN = '{{recaptcha_site_key}}';
 
@@ -432,6 +432,6 @@
 
             // Update progress when checkbox is clicked
             document.getElementById('agreeTerms').addEventListener('change', updateProgressBar);
-  </script>
+  */</script>
 </body>
 </html>
