--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,8 +49,9 @@
         <li><a href="#about"><i class="bi bi-info-circle-fill"></i>About</a></li>
         <li><a href="#courses"><i class="bi bi-book-fill"></i>Courses</a></li>
         <li><a href="#skills"><i class="bi bi-tools"></i>Skills</a></li>
+        <li><a href="#register"><i class="bi bi-person-lines-fill"></i>Register</a></li>
         <li><a href="#contact"><i class="bi bi-envelope-fill"></i>Contact</a></li>
-      </ul>
+      </ul>      
     </div>
   </nav>
 
