--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -393,7 +393,7 @@
                           
                   <div class="text-center text-muted small">
                       <i class="fas fa-shield-alt me-1"></i>
-                      This site is protected by reCAPTCHA and <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal">our terms and conditions</a> apply.
+                      This site is protected by reCAPTCHA and our <a href="#" data-bs-toggle="modal" data-bs-target="#termsModal">terms and conditions</a> apply.
                   </div>
       </div>
 
