--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -48,7 +48,7 @@
   <!-- Navbar -->
   <nav id="navbar" aria-label="Main navigation">
     <div class="nav-container">
-      <a href="#home" class="logo" aria-label="MioCode Home">
+      <a href="/" class="logo" aria-label="MioCode Home">
         <svg width="160" height="40" viewBox="0 0 160 40" xmlns="http://www.w3.org/2000/svg" role="img" aria-labelledby="logoTitle">
           <title id="logoTitle">MioCode Logo</title>
           <text x="0" y="28" font-family="Inter, sans-serif" font-weight="800" font-size="24" fill="#0ea5e9">mioC</text>
