--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,7 +3,7 @@
 
 {% block main_body %}
         
-<section id="home" class="hero">
+<section id="home" class="hero"  style="padding-top: 7.5rem;">
   <div class="hero-bg"></div>
   <div class="hero-content">
     <h1>MioCode Bootcamp</h1>
