--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,6 +11,13 @@
   <meta property="og:description" content="Transform your tech career with hands-on training in cloud, edge, and web development.">
   <meta property="og:image" content="{{ url_for('static', filename='images/og-image.jpg') }}">
   <meta name="theme-color" content="#ffffff">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://miocode.site/current-page-url">
+  <meta property="og:image" content="https://miocode.site/static/images/og-image.jpg">
+  <meta property="og:url" content="https://www.miocode.site/current-page-url">
+  <meta property="og:image" content="https://www.miocode.site/static/images/og-image.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
 
   <!-- Favicon & PWA -->
   {% set favicon_path = 'images/favicon/' %}
