--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,9 @@
   <meta property="og:image" content="{{ url_for('static', filename='images/og-image.jpg') }}">
   <meta name="theme-color" content="#ffffff">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://miocode.site/current-page-url">
+  <meta property="og:url" content="https://miocode.site">
   <meta property="og:image" content="https://miocode.site/static/images/og-image.jpg">
-  <meta property="og:url" content="https://www.miocode.site/current-page-url">
+  <meta property="og:url" content="https://www.miocode.site">
   <meta property="og:image" content="https://www.miocode.site/static/images/og-image.jpg">
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630">
