--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -372,9 +372,9 @@
                           <div class="form-floating">
                               <select class="form-select" id="payment" name="payment" required>
                                   <option value="">Choose Payment Plan...</option>
-                                  <option value="full-payment">Full Payment (10% discount)</option>
-                                  <option value="installments-3">3 Monthly Installments</option>
-                                  <option value="installments-6">6 Monthly Installments</option>
+                                  <option value="full-payment">Full Payment (5% discount)</option>
+                                  <option value="installments-3">* 3 Monthly Installments</option>
+                                  <option value="installments-6">* 6 Monthly Installments</option>
                                   <option value="scholarship">Scholarship Application</option>
                               </select>
                               <label for="payment">Payment Plan *</label>
