--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -355,7 +355,7 @@
                                   <option value="full-time">Full-time (9 AM - 5 PM)</option>
                                   <option value="part-time-evening">Part-time Evening (6 PM - 9 PM)</option>
                                   <option value="part-time-weekend">Part-time Weekend</option>
-                                  <option value="online">Online</option>
+                                  <option value="online">Online (BootCamp)</option>
                               </select>
                               <label for="schedule">Schedule *</label>
                               <div class="invalid-feedback"></div>
